Remove flicker on NTP when saving items for later

When adding a suggestion to the Reading List, a visible flicker is seen
on the Reading List section of the NTP because an empty section item is
added to it before replacing it by the new Reading List pages.
This CL prevents this flickering by not adding the transient empty
section item.

Bug: 770258
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ie8c8c0ab6a40ce26e833ceba14462b9ea83aa313
Reviewed-on: https://chromium-review.googlesource.com/730683
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510415}
Former-commit-id: 716dd42d4a06ec7e9407c11ff52b3c57fcfac717